# geonodes-mcp

./: .gitignore  addon.py  cursor.json  gemini_image.py  node_data.json  nodes.py  nodetypes.py  pyproject.toml  server.py
client/: client.py  client_anthropic.py  client_openai.py  modelprovider.py
